fix logos on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,5 +5,14 @@ search: false
 
 @charset "utf-8";
 
-@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
+@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}";
+// skin
 @import "minimal-mistakes"; // main partials
+
+.logos {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
